--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "scripts": {
-  },
-  "private": true
+  "scripts": {},
+  "private": true,
+  "dependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.12.0"
+  }
 }
