--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
     "parcel-bundler": "^1.12.0"
   }
 }
