--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "recharts": "^1.5.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
