--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "$(npm bin)/parcel build --out-dir docs src/index.html",
     "dev": "$(npm bin)/parcel src/index.html",
-    "serve:production": "$(npm bin)/parcel docs/index.html"
+    "serve:production-test": "$(npm bin)/parcel docs/index.html"
   },
   "private": true,
   "dependencies": {
