--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "http-server": "^0.11.1",
     "parcel-bundler": "^1.12.0"
   }
 }
