--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "$(npm bin)/parcel build --out-dir docs src/index.html",
+    "build": "$(npm bin)/parcel build --out-dir docs --public-url '/my-weight-transitions' src/index.html",
     "dev": "$(npm bin)/parcel src/index.html",
     "production-test": "npm run production-test:prepare && npm run production-test:run",
     "production-test:prepare": "rm -rf ./production-test && mkdir production-test && cp -r docs production-test/my-weight-transitions",
