Apply the public url to development environment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "$(npm bin)/parcel build --out-dir docs --public-url '/my-weight-transitions' src/index.html",
-    "dev": "$(npm bin)/parcel src/index.html",
+    "dev": "$(npm bin)/parcel --public-url '/my-weight-transitions' src/index.html",
     "production-test": "npm run production-test:prepare && npm run production-test:run",
     "production-test:prepare": "rm -rf ./production-test && mkdir production-test && cp -r docs production-test/my-weight-transitions",
     "production-test:run": "$(npm bin)/http-server production-test",
