Update "production-test" commands

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "deploy:build": "$(npm bin)/parcel build --out-dir . --public-url '/my-weight-transitions/' --no-cache src/index.html",
     "dev": "$(npm bin)/parcel --public-url '/my-weight-transitions/' src/index.html",
     "production-test": "npm run production-test:prepare && npm run production-test:run",
-    "production-test:prepare": "rm -rf ./production-test && mkdir production-test && cp -r docs production-test/my-weight-transitions",
+    "production-test:prepare": "rm -rf ./dist && rm -rf ./production-test && npm run production-test:prepare:build && mkdir production-test && cp -r dist production-test/my-weight-transitions",
+    "production-test:prepare:build": "$(npm bin)/parcel build --public-url '/my-weight-transitions/' src/index.html",
     "production-test:run": "$(npm bin)/http-server production-test",
     "rebuild": "rm -rf ./docs && npm run build",
     "test": "$(npm bin)/mocha"
