--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.18.6",
     "http-server": "^14.1.1",
     "mocha": "^10.0.0",
+    "parcel": "^2.7.0",
     "parcel-bundler": "^1.12.5"
   }
 }
