--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "devDependencies": {
     "http-server": "^14.1.1",
     "mocha": "^10.0.0",
-    "parcel": "^2.7.0",
-    "parcel-bundler": "^1.12.5"
+    "parcel": "^2.7.0"
   }
 }
