--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,9 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.16.0'
+          node-version-file: '.nvmrc'
       - run: npm ci
       - run: npm run deploy
       - uses: peaceiris/actions-gh-pages@v3
