--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,8 +6,8 @@ jobs:
     name: Run tests
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.16.0'
+          node-version-file: '.nvmrc'
       - run: npm ci
       - run: npm run test
